{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 75,
  "lineage": "f833820f-f1de-8d04-82b0-78d9931bf150",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NATIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-085ed4a9cea5f41cd",
            "domain": "vpc",
            "id": "eipalloc-067ed185a1a6ab3a4",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-035e5ff2e4d0aead7",
            "private_dns": "ip-10-1-0-220.ap-southeast-1.compute.internal",
            "private_ip": "10.1.0.220",
            "public_dns": "ec2-54-151-154-160.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.154.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat"
            },
            "tags_all": {
              "Name": "dev-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5182fad1edfaa68",
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:instance/i-00050db3358958c21",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00050db3358958c21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "petclinic-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05cb6e361d517302f",
            "private_dns": "ip-10-1-0-150.ap-southeast-1.compute.internal",
            "private_ip": "10.1.0.150",
            "public_dns": "ec2-13-212-206-140.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.212.206.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03feefd9fe42f528c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a5728855b01b6779",
            "tags": {
              "Name": "dev-bastion"
            },
            "tags_all": {
              "Name": "dev-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0089446eb5c476970"
            ]
          },
          "dependencies": [
            "aws_key_pair.petclinic",
            "aws_security_group.bastion",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e5182fad1edfaa68",
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:instance/i-0e562ac40a5776856",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e562ac40a5776856",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "petclinic-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-051eb2ee20cd599c2",
            "private_dns": "ip-10-1-3-100.ap-southeast-1.compute.internal",
            "private_ip": "10.1.3.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea7392630f80edf8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5936e401b6ab47e",
            "tags": {
              "Name": "dev-tomcat"
            },
            "tags_all": {
              "Name": "dev-tomcat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09fc6ecfc8f86a4c5"
            ]
          },
          "dependencies": [
            "aws_security_group.tomcat",
            "aws_subnet.privatesubnet",
            "aws_vpc.petclinic-dev",
            "aws_key_pair.petclinic",
            "aws_security_group.alb",
            "aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:internet-gateway/igw-010f309df56ae9f60",
            "id": "igw-010f309df56ae9f60",
            "owner_id": "024741383610",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067ed185a1a6ab3a4",
            "connectivity_type": "public",
            "id": "nat-006f035aaacb070b2",
            "network_interface_id": "eni-035e5ff2e4d0aead7",
            "private_ip": "10.1.0.220",
            "public_ip": "54.151.154.160",
            "subnet_id": "subnet-0a5728855b01b6779",
            "tags": {
              "Name": "dev-natgw"
            },
            "tags_all": {
              "Name": "dev-natgw"
            }
          },
          "dependencies": [
            "aws_eip.NATIP",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dataroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:route-table/rtb-01412dc67958922e1",
            "id": "rtb-01412dc67958922e1",
            "owner_id": "024741383610",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-006f035aaacb070b2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-dataroute"
            },
            "tags_all": {
              "Name": "dev-dataroute"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NATIP",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:route-table/rtb-04fb2668ce5b8c4fd",
            "id": "rtb-04fb2668ce5b8c4fd",
            "owner_id": "024741383610",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-006f035aaacb070b2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-privateroute"
            },
            "tags_all": {
              "Name": "dev-privateroute"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic-dev",
            "aws_eip.NATIP",
            "aws_nat_gateway.nat-gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:route-table/rtb-0c0840d204a35705e",
            "id": "rtb-0c0840d204a35705e",
            "owner_id": "024741383610",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-010f309df56ae9f60",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-publicroute"
            },
            "tags_all": {
              "Name": "dev-publicroute"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.petclinic-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "datasubassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d1029a3cf241c16",
            "route_table_id": "rtb-01412dc67958922e1",
            "subnet_id": "subnet-09809e521516fef35"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev",
            "aws_eip.NATIP",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.dataroute",
            "aws_subnet.datasubnet",
            "aws_subnet.pubsubnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b8cfb9da9a88bde",
            "route_table_id": "rtb-01412dc67958922e1",
            "subnet_id": "subnet-0f8caa1a29efeb9d9"
          },
          "dependencies": [
            "aws_eip.NATIP",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.dataroute",
            "aws_subnet.datasubnet",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic-dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ece3771dacfccf97",
            "route_table_id": "rtb-01412dc67958922e1",
            "subnet_id": "subnet-028351c3b5b1f457b"
          },
          "dependencies": [
            "aws_subnet.datasubnet",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic-dev",
            "aws_eip.NATIP",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.dataroute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prisubassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eb7124b2fd61418",
            "route_table_id": "rtb-04fb2668ce5b8c4fd",
            "subnet_id": "subnet-0e5936e401b6ab47e"
          },
          "dependencies": [
            "aws_eip.NATIP",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.privatesubnet",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic-dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043b68f26a22a44be",
            "route_table_id": "rtb-04fb2668ce5b8c4fd",
            "subnet_id": "subnet-02eff5acaf955a866"
          },
          "dependencies": [
            "aws_eip.NATIP",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.privatesubnet",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic-dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4d769efe02d354b",
            "route_table_id": "rtb-04fb2668ce5b8c4fd",
            "subnet_id": "subnet-0c61db0be2ee89690"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev",
            "aws_eip.NATIP",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.privateroute",
            "aws_subnet.privatesubnet",
            "aws_subnet.pubsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2ccb05070a2bf20",
            "route_table_id": "rtb-0c0840d204a35705e",
            "subnet_id": "subnet-0a5728855b01b6779"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic-dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09de916ae587a3e0b",
            "route_table_id": "rtb-0c0840d204a35705e",
            "subnet_id": "subnet-071b9419a9c0d2272"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev",
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032150afa85671346",
            "route_table_id": "rtb-0c0840d204a35705e",
            "subnet_id": "subnet-04d6be081cc322131"
          },
          "dependencies": [
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnet",
            "aws_vpc.petclinic-dev",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:security-group/sg-04dcea05e7d923351",
            "description": "Allow alb inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04dcea05e7d923351",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "alb from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "024741383610",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-alb-sg"
            },
            "tags_all": {
              "Name": "dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:security-group/sg-0089446eb5c476970",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0089446eb5c476970",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "024741383610",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-bastion-sg"
            },
            "tags_all": {
              "Name": "dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:security-group/sg-03a1e2ea10dcb9adc",
            "description": "Allow rds inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a1e2ea10dcb9adc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "rds from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0089446eb5c476970"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "rds from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09fc6ecfc8f86a4c5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds",
            "name_prefix": "",
            "owner_id": "024741383610",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-rds-sg"
            },
            "tags_all": {
              "Name": "dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.tomcat",
            "aws_vpc.petclinic-dev",
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tomcat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:security-group/sg-09fc6ecfc8f86a4c5",
            "description": "Allow tomcat inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09fc6ecfc8f86a4c5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "tomcat from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0089446eb5c476970"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "tomcat from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04dcea05e7d923351"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "tomcat",
            "name_prefix": "",
            "owner_id": "024741383610",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-tomcat-sg"
            },
            "tags_all": {
              "Name": "dev-tomcat-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.bastion",
            "aws_vpc.petclinic-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datasubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:subnet/subnet-09809e521516fef35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-09809e521516fef35",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024741383610",
            "tags": {
              "Name": "dev-privatesubnet-1"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-1"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:subnet/subnet-0f8caa1a29efeb9d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.7.0/24",
            "id": "subnet-0f8caa1a29efeb9d9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024741383610",
            "tags": {
              "Name": "dev-privatesubnet-2"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-2"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:subnet/subnet-028351c3b5b1f457b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.8.0/24",
            "id": "subnet-028351c3b5b1f457b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024741383610",
            "tags": {
              "Name": "dev-privatesubnet-3"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-3"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:subnet/subnet-0e5936e401b6ab47e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0e5936e401b6ab47e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024741383610",
            "tags": {
              "Name": "dev-privatesubnet-1"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-1"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:subnet/subnet-02eff5acaf955a866",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-02eff5acaf955a866",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024741383610",
            "tags": {
              "Name": "dev-privatesubnet-2"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-2"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:subnet/subnet-0c61db0be2ee89690",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-0c61db0be2ee89690",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "024741383610",
            "tags": {
              "Name": "dev-privatesubnet-3"
            },
            "tags_all": {
              "Name": "dev-privatesubnet-3"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:subnet/subnet-0a5728855b01b6779",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0a5728855b01b6779",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024741383610",
            "tags": {
              "Name": "dev-pubsubnet-1"
            },
            "tags_all": {
              "Name": "dev-pubsubnet-1"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:subnet/subnet-071b9419a9c0d2272",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-071b9419a9c0d2272",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024741383610",
            "tags": {
              "Name": "dev-pubsubnet-2"
            },
            "tags_all": {
              "Name": "dev-pubsubnet-2"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:subnet/subnet-04d6be081cc322131",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-04d6be081cc322131",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "024741383610",
            "tags": {
              "Name": "dev-pubsubnet-3"
            },
            "tags_all": {
              "Name": "dev-pubsubnet-3"
            },
            "vpc_id": "vpc-05ca15a248923c94f"
          },
          "dependencies": [
            "aws_vpc.petclinic-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "petclinic-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:024741383610:vpc/vpc-05ca15a248923c94f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-06554f69f836d73cb",
            "default_route_table_id": "rtb-028695ea153ed2057",
            "default_security_group_id": "sg-050311798c9d1bdb9",
            "dhcp_options_id": "dopt-767f8110",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05ca15a248923c94f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-028695ea153ed2057",
            "owner_id": "024741383610",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}